# ansible-navigator

./: .cspell-dictionary.txt  .darglint  .dockerignore  .env  .envrc  .flake8  .git_archival.txt  .gitattributes  .gitignore  .markdownlint.yaml  .pep8  .pre-commit-config.yaml  .prettierignore  .pylint-spelling-private-dict  .pylint-spelling-private-dict2  .pylintrc  .readthedocs.yml  .yamllint  .zuul.yaml  CHANGELOG.md  Containerfile  Containerfile2  MANIFEST.in  README.md  TODO.txt  ansible-navigator.yaml  ansible-navigator.yml  ansible.cfg  ansible_navigator.cfg  bindep.txt  codecov.yml  collection_doc_cache.db  collection_doc_cache.db-journal  containerfile3  cspell.config.yaml  explore_artifact.json  foo.db  foo.txt  foo.yaml  go.md  (+38 more)
.ansible-navigator/: ___ansible-navigator.yml  _ansible-navigator.yml  ansible-navigator.yml
.config/: Dockerfile  constraints.txt  dictionary.txt  pydoclint-baseline.txt  pylint-baseline.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.in
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  chronographer.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation_report.md  documentation_report.yml  feature_request.md  feature_request.yml  security_bug_report.md
.github/workflows/: ack.yml  autoupdate.yaml  autoupdate.yml  push.yml  pytest.yml  release.yml  smoke.yml  tox.yml
.zuul.d/: jobs.yaml  project.yaml
ansible_launcher/: action_runner.py  app.py  app_public.py  cli.py  cli_args.py  web_xterm_js.py  yaml.py
ansible_launcher/actions/: blog_bullhorn.py  explore.py  inventory.py  open_file.py  serialize_yaml.py  write_file.py
ansible_launcher/ui_framework/: field_option.py  field_radio.py  field_text.py  field_validators.py  form.py  form_utils.py  utils.py
ansible_navigator/: __init__.py  __main__.py  _version.py  action_runner.py  app.py  app_public.py  cli.py  cli_args.py  config.py  initialization.py  steps.py  utils.py  web_xterm_js.py  yaml.py
ansible_navigator/actions/: __init__.py  _actions.py  _runner.py  back.py  collections.py  config.py  doc.py  ee_details.py  explore.py  filter.py  help_doc.py  images.py  inventory.py  load.py  log.py  open_file.py  replay.py  run.py  sample_form.py  sample_notification.py  sample_working.py  select.py  stdout.py  stream.py  template.py  welcome.py  write_file.py
ansible_navigator/command_runner/: __init__.py  command_runner.py
ansible_navigator/config_maker/: __init__.py  ansible_navigator_config.py  ansible_navigator_post_process.py  definitions.py  maker.py  parser.py
ansible_navigator/configuration/: __init__.py  application_configuration.py  application_post_processor.py  configuration.py  definitions.py  parser.py
ansible_navigator/configuration_subsystem/: __init__.py  configurator.py  definitions.py  navigator_configuration.py  navigator_post_processor.py  parser.py
ansible_navigator/data/: config.yml
ansible_navigator/documentation_generation/: doc_updater.py
ansible_navigator/image_manager/: __init__.py  image_inspector.py  image_puller.py
ansible_navigator/runner/: api.py  defaults.py
ansible_navigator/tm_tokenize/: compiler.py  grammars.py  reg.py  rules.py  utils.py
ansible_navigator/ui_framework/: __init__.py  colorize.py  curses_window.py  demo_mode.py  field_button.py  field_information.py  field_radio.py  field_text.py  field_working.py  form.py  form_defs.py  form_handler_button.py  form_handler_information.py  form_handler_options.py  form_handler_text.py  form_handler_working.py  form_presenter.py  form_utils.py  menu_builder.py  ui.py  ui_config.py  utils.py
doc/: requirements.txt
doc/source/: conf.py  installing.rst
docs/: ansible-navigator.yml  apple-container.md  changelog.md  conf.py  configuration.rst  faq.md  index.md  index.rst  installation.md  installation.rst  installing.rst  param_details.yml  requirements.in  requirements.txt  sample-config.yml  sample.rst  settings.md  settings.rst  subcommands.md  subcommands.rst
docs/.generated/: .gitignore
docs/_ext/: regenerate_docs.py  single_sourced_data.py  spelling_stub_ext.py
docs/changelog-fragments.d/: .CHANGELOG-TEMPLATE.md.j2  1029.breaking.md  1058.feature.md  1059.feature.md  1061.breaking.md  1062.bugfix.md  1075.breaking.md  1080.feature.md  1085.breaking.md  1085.feature.md  1086.feature.md  1090.feature.md  1093.feature.md  1099.feature.md  1100.breaking.md  1101.feature.md  1102.breaking.md  1103.breaking.md  1104.breaking.md  1106.breaking.md  1106.feature.md  1110.feature.md  1111.feature.md  1112.bugfix.md  1113.breaking.md  1120.bugfix.md  1126.feature.md  1133.feature.md  1135.feature.md  1137.feature.md  1138.feature.md  1144.feature.md  1145.feature.md  1149.breaking.md  1151.feature.md  1152.feature.md  1163.bugfix.md  1178.bugfix.md  1182.feature.md  1220.bugfix.md  (+37 more)
docs/cli_reference/: index.rst  tui_mode.rst
docs/contributing/: code_of_conduct.md  community.md  debug_navigator.md  guidelines.md  security.md
docs/user_guide/: explore_content.rst  index.rst  manage_inventory.rst  overview.rst  run_playbooks.rst  using_docs.rst
etc/ansible-navigator/: settings.yml
licenses/: LICENSE.asottile_tm_tokenize.all.txt  LICENSE.source.json.json.txt  LICENSE.source.shell.json.txt  LICENSE.source.yaml.json  LICENSE.source.yaml.json.txt  LICENSE.text.html.derivative.json.txt  LICENSE.text.html.markdown.json.txt  LICENSE.text.log.json.txt
playbooks/: pre-run.yaml
src/: ansible-navigator.v1  ansible-navigator.yaml  ansible-navigator.yml
src/ansible_navigator/: __init__.py  _yaml.py  (+20 more)
tests/: __init__.py  _common.py  conftest.py  defaults.py  test_config.py  test_yaml.py  tests_yaml.py
tools/: report-coverage  test-setup.sh
utilities/: doc_updater.py
winston/: __init__.py  __main__.py  action_runner.py  app.py  app_public.py  cli.py  cli_args.py  colorize.py  curses_defs.py  explorer_ui.py  playbook_runner.py  player.py  player_ui_callbacks.py  step.py  steps.py  ui.py  utils.py  web_xterm_js.py  yaml.py
{toxworkdir}/: coverage-{envname}.xml
(+2502 files in other folders)
